cmake_minimum_required(VERSION 3.10)
project(ticTacToe)
find_package(GTest REQUIRED)
set(CMAKE_CXX_STANDARD 20)
add_executable(ticTacToe main.cpp ticTacToeClass.cpp readAndOutput.cpp )
target_include_directories(ticTacToe PRIVATE ${GTest_INCLUDE_DIRS} )
target_link_libraries(ticTacToe PRIVATE GTest::GTest GTest::Main)
